# damn-so-deep-research

./: .gitignore  CHANGES.md  Dockerfile  README.md  agents.py  config.py  database.py  db_session.py  docker-compose.yml  exceptions.py  logging_setup.py  main.py  plan.md  pyproject.toml  requirements.txt  research_agents.py  runner.py  schema.py  test_agents_config.py  test_async_structured.py  test_db.sqlite  test_search_manual.py  tools.py
backend/: __init__.py  main.py
backend/agents/: __init__.py  graph.py  routing.py  state.py
backend/agents/evaluator/: __init__.py  node.py
backend/agents/executor/: __init__.py  routing.py  subgraph.py
backend/agents/nodes/: __init__.py  evaluator.py  executor.py  planner.py  (+3 more)
backend/api/: __init__.py  dependencies.py  websocket.py
backend/core/: __init__.py  checkpointer.py  config.py  exceptions.py  llm.py  logging.py
backend/ml/: __init__.py  text_processing.py
backend/persistence/: __init__.py  database.py  models.py
backend/services/: __init__.py  notification_service.py  research_service.py
backend/tools/: __init__.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
infrastructure/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
searxng/: settings.yml
tests/: conftest.py
tests/backend/: test_api.py  test_parallel.py  test_state.py
tests/frontend/: __init__.py
tools/: execution.py  legacy.py  planning.py  reporting.py  search.py
utils/: context.py  text_processing.py  web_scraper.py
(+54 files in other folders)
