[project]
name = "damn-so-deep-research"
version = "2.0.0"
description = "Deep research assistant powered by LangGraph"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # LangGraph
    "langgraph>=0.3.0",
    "langgraph-checkpoint>=4.0.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",

    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Database
    "aiosqlite>=0.20.0",

    # HTTP
    "httpx[socks]>=0.27.0",

    # ML
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",

    # Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
